schemas/v0.2.1/docs/insula-json-dataset-allof-1.md
# Untitled undefined type in Insula JSON dataset Schema

```txt
https://cgi-italy.github.io/insula/schemas/v0.2.0/apps/insula-json-dataset.schema.json#/allOf/1
```



| Abstract            | Extensible | Status         | Identifiable            | Custom Properties | Additional Properties | Access Restrictions | Defined In                                                                                               |
| :------------------ | :--------- | :------------- | :---------------------- | :---------------- | :-------------------- | :------------------ | :------------------------------------------------------------------------------------------------------- |
| Can be instantiated | No         | Unknown status | Unknown identifiability | Forbidden         | Allowed               | none                | [insula-json-dataset.schema.json\*](schemas/apps/insula-json-dataset.schema.json "open original schema") |

## 1 Type

merged type ([Details](insula-json-dataset-allof-1.md))

one (and only one) of

* all of

  * all of

    * [Raster collection tag](platform-collection-defs-raster-collection-tag.md "check type definition")

    * [Raster collection](raster-collection.md "check type definition")

  * [Raster layer configuration](insula-json-raster-dataset-allof-raster-layer-configuration.md "check type definition")

* all of

  * all of

    * [Vector collection tag](platform-collection-defs-vector-collection-tag.md "check type definition")

    * [Vector collection](vector-collection.md "check type definition")

  * [Vector layer configuration](insula-json-vector-dataset-allof-vector-layer-configuration.md "check type definition")
